WIP Support multiple environments
Introduced Environment concept to jetty-start, splitting out the StartArgs fields/methods that can be ee specific.